kodekloud/networkPolicy/api_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  namespace: dev
  labels:
    role: api
spec:
  containers:
    - name: api-pod
      image: some-api-app
      ports:
        - containerPort: 5000
