kodekloud/networkPolicy/db_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: dev
  labels:
    role: db
spec:
  containers:
    - name: db-pod
      image: mysql
      ports:
        - containerPort: 3306
