kodekloud/networkPolicy/web_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  namespace: dev
  labels:
    role: web
spec:
  containers:
    - name: web-pod
      image: some-web-app
      ports:
        - containerPort: 80
